--- a/html/portfolio/index.html
+++ b/html/portfolio/index.html
@@ -39,7 +39,19 @@
             <p>Therefore I always call them prototypes until they are actually shipped or in beta-test phase</p>
             <div id="portfolio"></div>
             <video src="../video/capy-game-design3.mp4" controls="show" class="video"></video>
+            <h3>Sprites credits to (sources):</h3>
+            <ul>
+                <li><a href="https://robertpinero.itch.io/free-rpg-mv-class-sprites"></a>Red Knight</li>
+                <li><a href="https://www.pngwing.com/en/free-png-zrzud">Rock</a></li>
+                <li><a href="https://bscully.tumblr.com/post/616451629695352832/learn-log-4-grassy-grove">Grass</a></li>
+                <li><a href="https://www.spriters-resource.com/pc_computer/maplestory/sheet/16216/">Jiangshi Mushroom</a></li>
+            </ul>
             <video src="../video/capy-game-design1.mp4" controls="show" class="video"></video>
+            <h3>Sprites credits to (sources):</h3>
+            <ul>
+                <li><a href="https://craftpix.net/freebies/free-space-shooter-game-gui/"></a>Spaceships</li>
+                <li><a href="https://www.pexels.com/photo/stars-1257860/">Background</a></li>
+            </ul>
         </main>
         <footer>
             <div id="footer-wrapper1">
