--- a/html/index.html
+++ b/html/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <!--
     author: Paul Kim
-    date: October 5, 2022
-    version: 1.0
+    date: October 20, 2022
+    version: 1.2
     notes: Capytech main page
 -->
 
@@ -43,10 +43,14 @@
             <div class="main-wrapper">
                 <h1>CapyTech</h1>
                 <img src="../html/image/text-effect.jpg" alt="Paul Neon Effect" id="paul-neon">
-                <p>Hello! My name is Paul Kim and I am a full stack developer based in Vancouver, British Columbia, Canada.</p>
-                <p>I have completed the Applied Software Development certificate and the Applied Computer Information Systems certificate at British Columbia Institute of Technology (BCIT), and currently I am working towards the Computer Systems certificate. I have been programming for two years, and I am proficient in Java, Python, C, SQL, JavaScript, Unity, C#, HTML, and CSS.</p>
+                <p>Hello! My name is Paul Kim and I am a full stack developer based in Vancouver, British Columbia,
+                    Canada.</p>
+                <p>I have completed the Applied Software Development certificate and the Applied Computer Information
+                    Systems certificate at British Columbia Institute of Technology (BCIT), and currently I am working
+                    towards the Computer Systems certificate. I have been programming for two years, and I am proficient
+                    in Java, Python, C, SQL, JavaScript, Unity, C#, HTML, and CSS.</p>
                 <p>Feel free to check out my GitHub here: <a href=" https://github.com/codingcapy" target="_blank">
-                Coding Capy</a></p>
+                        Coding Capy</a></p>
                 <p>I can build programs and apps and develop websites using the following languages:</p>
                 <div id="languages">
                     <img src="../html/image/python.png" alt="">
@@ -61,7 +65,8 @@
                 </div>
                 <p>I graduated the University of British Columbia with a major in Political Science and minor in
                     Economics in 2014.
-                    I have 7+ years of experience working for financial institutions in various roles, starting from bank
+                    I have 7+ years of experience working for financial institutions in various roles, starting from
+                    bank
                     teller to team lead, advisory associate, and 4 years as a credit administrator.
                     Currently I am attending BCIT and developing apps on the side, with a team of developers and some by
                     myself.
