--- a/html/about/index.html
+++ b/html/about/index.html
@@ -38,14 +38,18 @@
             </ul>
         </nav>
     </header>
-
+    <div id="wrapper">
         <main>
-            <div id="wrapper">
+
             <div class="main-wrapper">
                 <h1>About CapyTech</h1>
-                <p>I was born in Belgium, grew up in Switzerland, and I am a permanent resident of Canada. My hobbies and passion include fitness, outdoor sports and activities, travelling, playing (and developing) video games, anime, music, art, go-karting, skiing and snowboarding, cooking, and dogs and cats.</p>
-                <p>CapyTech is the brand I want to develop, and it is named as such because my best friend pointed out that I look like a capybara, and also, because capybaras are awesome.</p>
-                <p>My goal in life is to develop apps that are useful for business data and process flows, as well as games that are fun to play and watch.</p>
+                <p>I was born in Belgium, grew up in Switzerland, and I am a permanent resident of Canada. My hobbies
+                    and passion include fitness, outdoor sports and activities, travelling, playing (and developing)
+                    video games, anime, music, art, go-karting, skiing and snowboarding, cooking, and dogs and cats.</p>
+                <p>CapyTech is the brand I want to develop, and it is named as such because my best friend pointed out
+                    that I look like a capybara, and also, because capybaras are awesome.</p>
+                <p>My goal in life is to develop apps that are useful for business data and process flows, as well as
+                    games that are fun to play and watch.</p>
             </div>
         </main>
         <footer>
