--- a/html/portfolio/index.html
+++ b/html/portfolio/index.html
@@ -43,12 +43,15 @@
 
             <div id="portfolio-main">
                 <h1>Capytech Portfolio</h1>
-                <h2>Games</h2>
+                <h2>GameProjects</h2>
                 <p>The following are game dev projects I have worked on by myself (I never consider them 100% finished,
                     the more time and effort put into a project, the better it gets)</p>
                 <p>Therefore I always call them prototypes until they are actually shipped or in beta-test phase</p>
+                <h3>Game Projects using Python Pygame Library</h3>
+                <h4>2D ARPG Project</h4>
                 <video src="../video/capy-game-design3.mp4" controls class="video"></video>
-                <h3>Sprites credits to (sources):</h3>
+                <p>This is actually my third game development project, all written in Python and using the pygame library. This project taught me animations, screen scrolling, and tile generation. This is still a work in progress, and I am still adding features and working on balancing.</p>
+                <h4>Sprites credits to (sources):</h4>
                 <ul>
                     <li><a href="https://robertpinero.itch.io/free-rpg-mv-class-sprites" target="_blank">Red Knight</a>
                     </li>
@@ -58,8 +61,10 @@
                     <li><a href="https://www.spriters-resource.com/pc_computer/maplestory/sheet/16216/"
                             target="_blank">Jiangshi Mushroom</a></li>
                 </ul>
+                <h4>2D Shoot'em-up Project</h4>
                 <video src="../video/capy-game-design1.mp4" controls class="video"></video>
-                <h3>Sprites credits to (sources):</h3>
+                <p>This is my second game development project, fully written in Python and using the pygame library. I learned to procedurally generate enemies through this project. I am considering adding more features such as loot drops, upgrades, and boss addition in the future.</p>
+                <h4>Sprites credits to (sources):</h4>
                 <ul>
                     <li><a href="https://craftpix.net/freebies/free-space-shooter-game-gui/"
                             target="_blank">Spaceships</a></li>
