Twentieth commit - added new portfolio material

--- a/html/portfolio/index.html
+++ b/html/portfolio/index.html
@@ -43,6 +43,37 @@
 
             <div id="portfolio-main">
                 <h1>Capytech Portfolio</h1>
+                <h2>Current Project</h2>
+                <h3>Banking System Prototype</h3>
+                <img src="../image/banking-sys-prototype.jpg" alt="Banking System Prototype"
+                    id="banking-sys-protoype-img">
+                <p>Having worked for a financial institution for the past 7 years, I have decided to make a personal
+                    project of building a banking system prototype that also functions as a CRM.</p>
+                <p>This prototype uses Java WindowBuilder library to render a graphical user interface. It initializes
+                    with a login window consisting of username and password labels and textfields, as well as a forgot
+                    password edge case button which prompts the user to enter an email address in order to send them a
+                    temporary password.</p>
+                <p>Once the user logs in, the home frame is called and the login window is disposed. The user can search
+                    for a profile by various means and can also display all existing profiles to choose from. The user
+                    can
+                    also create a new profile.</p>
+                <p>When the user accesses a profile, the profile dialog is called, containing the first name, middle
+                    name, last name, date of birth, phone number, address, and email address of the client. These fields
+                    are locked until the user presses the 'Edit' button whereby they can modify the data and save it.
+                </p>
+                <p>The profile dialog also contains a list of all the accounts the client has and an account can be
+                    selected to perform transactions such as withdraw, deposit, and transfer funds. The user can also
+                    create and delete accounts.</p>
+                <p>The user can also add notes into the client's profile.</p>
+                <p>The data is contained in csv files which are loaded into the program at launch and all changes saved
+                    as the
+                    program is closed.</p>
+                <p>This project is by no means finished; I have ambitious plans of adding more features such as credit
+                    cards, mortgages, lines of credits, home equity lines of credits, and term deposits.</p>
+                <p>Please feel free to check it out on my GitHub at: </p>
+                <a href="https://github.com/codingcapy/BankingSysPrototype">Banking System Prototype</a>
+                <br />
+                <br />
                 <h2>GameProjects</h2>
                 <p>The following are game dev projects I have worked on by myself (I never consider them 100% finished,
                     the more time and effort put into a project, the better it gets)</p>
@@ -50,7 +81,9 @@
                 <h3>Game Projects using Python Pygame Library</h3>
                 <h4>2D ARPG Project</h4>
                 <video src="../video/capy-game-design3.mp4" controls class="video"></video>
-                <p>This is actually my third game development project, all written in Python and using the pygame library. This project taught me animations, screen scrolling, and tile generation. This is still a work in progress, and I am still adding features and working on balancing.</p>
+                <p>This is actually my third game development project, all written in Python and using the pygame
+                    library. This project taught me animations, screen scrolling, and tile generation. This is still a
+                    work in progress, and I am still adding features and working on balancing.</p>
                 <h4>Sprites credits to (sources):</h4>
                 <ul>
                     <li><a href="https://robertpinero.itch.io/free-rpg-mv-class-sprites" target="_blank">Red Knight</a>
@@ -63,7 +96,9 @@
                 </ul>
                 <h4>2D Shoot'em-up Project</h4>
                 <video src="../video/capy-game-design1.mp4" controls class="video"></video>
-                <p>This is my second game development project, fully written in Python and using the pygame library. I learned to procedurally generate enemies through this project. I am considering adding more features such as loot drops, upgrades, and boss addition in the future.</p>
+                <p>This is my second game development project, fully written in Python and using the pygame library. I
+                    learned to procedurally generate enemies through this project. I am considering adding more features
+                    such as loot drops, upgrades, and boss addition in the future.</p>
                 <h4>Sprites credits to (sources):</h4>
                 <ul>
                     <li><a href="https://craftpix.net/freebies/free-space-shooter-game-gui/"
