24th commit - fixed article github link to new tab

--- a/html/portfolio/index.html
+++ b/html/portfolio/index.html
@@ -71,7 +71,7 @@
                 <p>This project is by no means finished; I have ambitious plans of adding more features such as credit
                     cards, mortgages, lines of credits, home equity lines of credits, and term deposits.</p>
                 <p>Please feel free to check it out on my GitHub at: </p>
-                <a href="https://github.com/codingcapy/BankingSysPrototype">Banking System Prototype</a>
+                <a href="https://github.com/codingcapy/BankingSysPrototype" target="_blank">Banking System Prototype</a>
                 <br />
                 <br />
                 <h2>GameProjects</h2>
