--- a/html/portfolio/index.html
+++ b/html/portfolio/index.html
@@ -23,27 +23,72 @@
 </head>
 
 <body>
-    <header>
-        <div id="top-bar">
-            <a href="../index.html"><img src="../image/icon.jpg" alt="Capytech Icon" id="capytech-icon"></a>
-            <button class="hamburger-menu">&#9776;</button>
-        </div>
-        <nav>
-            <ul id="nav-ul">
-                <li class="nav-li"><a class="nav-link" href="../index.html">Home</a></li>
-                <li class="nav-li"><a class="nav-link" href="../portfolio/index.html">Portfolio</a></li>
-                <li class="nav-li"><a class="nav-link" href="../articles/index.html">Articles</a></li>
-                <li class="nav-li"><a class="nav-link" href="../about/index.html">About</a></li>
-                <li class="nav-li"><a class="nav-link" href="../contact/index.html">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
     <div id="wrapper">
+        <header>
+            <div id="top-bar">
+                <a href="../index.html"><img src="../image/icon.jpg" alt="Capytech Icon" id="capytech-icon"></a>
+                <button class="hamburger-menu">&#9776;</button>
+            </div>
+            <nav>
+                <ul id="nav-ul">
+                    <li class="nav-li"><a class="nav-link" href="../index.html">Home</a></li>
+                    <li class="nav-li"><a class="nav-link" href="../portfolio/index.html">Portfolio</a></li>
+                    <li class="nav-li"><a class="nav-link" href="../articles/index.html">Articles</a></li>
+                    <li class="nav-li"><a class="nav-link" href="../about/index.html">About</a></li>
+                    <li class="nav-li"><a class="nav-link" href="../contact/index.html">Contact</a></li>
+                </ul>
+            </nav>
+        </header>
+
         <main>
 
             <div id="portfolio-main">
                 <h1>Capytech Portfolio</h1>
-                <h2>Current Project</h2>
+                <h2>Current Projects</h2>
+                <h3>Banking System Prototype II</h3>
+                <img src="../image/banking-sys-python.jpg" alt="Banking System Prototype II"
+                    id="banking-sys-protoype-img">
+                <p>This project is a banking system prototype program written using object-oriented programming in
+                    Python.</p>
+                <p>The user can create instances of the Profile and Account class objects that are stored in arrays and
+                    saved into csv files at program termination, and are retrieved and parsed into their appropriate
+                    objects before being appended into their appropriate arrays at program launch.
+                </p>
+                <p>The user can also modify attributes of the Profile class object instances via an edit feature, and
+                    can deactivate profiles and accounts by manipulating their status attributes. </p>
+                <p>The display feature allows the user to display profiles in sorted order by the attribute of their
+                    choice.</p>
+                <p>The search feature allows the user to search a profile by an attribute of their choice that qualifies
+                    as the primary key.</p>
+                <p>Transactions such as deposit, withdrawal and funds transfer between accounts can be performed by the
+                    user by calling the appropriate functions using appropriate program features.</p>
+                <p>All search, funds transfer and deactivation features use TimSort to sort the array and uses binary
+                    search to
+                    search for the profile or account in order to reduce time complexity.</p>
+                <p>Every feature is safe-guarded in terms of data type input validation.</p>
+                <p>Please feel free to check out the project at:</p>
+                <a href="https://github.com/codingcapy/BankingSystemProject">Banking System Project</a>
+                <br>
+                <br>
+                <h3>Art Gallery Web App</h3>
+                <img src="../image/art-gallery-web-app.jpg" alt="Art Gallery Web App" id="art-gallery-img">
+                <p>This is a web app I developed for a talented artist who wanted her customers to be able to browse her
+                    shop at conventions without necessarily having to wait near her booth physically to look at her
+                    products.</p>
+                <p>Stack used is HTML5, CSS3, and JS ES6.</p>
+                <p>There are a total of 10 categories and each can be
+                    expanded and collapsed on click/tab. The background color changes and the pointer rotates 108
+                    degrees.</p>
+                <p>The end user can scroll horizontally to browse through products under each category. The
+                    screen auto-scrolls to the location at which the user tapped the category, and the "to-top" button
+                    appears on the lower right once the user scrolls down the page and disappears as the screen
+                    approaches the top of the page.</p>
+
+                <p>Please feel free to check out the live prototype at:</p>
+                <a href="https://codingcapy.github.io/jellyfishforest/" target="_blank">Art Gallery Web App
+                    Prototype</a>
+                <br />
+                <br />
                 <h3>Banking System Prototype</h3>
                 <img src="../image/banking-sys-prototype.jpg" alt="Banking System Prototype"
                     id="banking-sys-protoype-img">
@@ -102,7 +147,8 @@
                 <h4>Sprites credits to (sources):</h4>
                 <ul>
                     <li><a href="https://craftpix.net/freebies/free-space-shooter-game-gui/"
-                            target="_blank">Spaceships</a></li>
+                            target="_blank">Spaceships</a>
+                    </li>
                     <li><a href="https://www.pexels.com/photo/stars-1257860/" target="_blank">Background</a></li>
                 </ul>
             </div>
