29th commit - display layout upgrades

--- a/html/index.html
+++ b/html/index.html
@@ -45,23 +45,23 @@
                 <img src="../html/image/text-effect.jpg" alt="Paul Neon Effect" id="paul-neon">
                 <p>Hello! My name is Paul Kim and I am a full stack developer based in Vancouver, British Columbia,
                     Canada.</p>
-                <p>I have completed the Applied Software Development certificate and the Applied Computer Information
+                <p>I have recently completed the Applied Software Development certificate and the Applied Computer
+                    Information
                     Systems certificate at British Columbia Institute of Technology (BCIT), and currently I am working
-                    towards the Computer Systems certificate. I have been programming for two years, and I am proficient
-                    in Java, Python, C, SQL, JavaScript, Unity, C#, HTML, and CSS.</p>
+                    towards the Computer Systems certificate.</p>
                 <p>Feel free to check out my GitHub here: <a href=" https://github.com/codingcapy" target="_blank">
                         Coding Capy</a></p>
-                <p>I can build programs and apps and develop websites using the following languages:</p>
+                <p>Language proficiencies:</p>
                 <div id="languages">
-                    <img src="../html/image/python.png" alt="">
-                    <img src="../html/image/java.png" alt="">
-                    <img src="../html/image/c.png" alt="">
-                    <img src="../html/image/sql.png" alt="">
-                    <img src="../html/image/c-sharp.png" alt="">
-                    <img src="../html/image/unity.png" alt="">
-                    <img src="../html/image/javascript.png" alt="">
-                    <img src="../html/image/css3.png" alt="">
-                    <img src="../html/image/html5.png" alt="">
+                    <img src="../html/image/python.png" alt="" class="lang-icon">
+                    <img src="../html/image/java.png" alt="" class="lang-icon">
+                    <img src="../html/image/c.png" alt="" class="lang-icon">
+                    <img src="../html/image/sql.png" alt="" class="lang-icon">
+                    <img src="../html/image/c-sharp.png" alt="" class="lang-icon">
+                    <img src="../html/image/unity.png" alt="" class="lang-icon">
+                    <img src="../html/image/javascript.png" alt="" class="lang-icon">
+                    <img src="../html/image/css3.png" alt="" class="lang-icon">
+                    <img src="../html/image/html5.png" alt="" class="lang-icon">
                 </div>
                 <p>I graduated the University of British Columbia with a major in Political Science and minor in
                     Economics in 2014.
@@ -72,6 +72,8 @@
                     myself.
                 </p>
             </div>
+            <h2>Most Recent Portfolio Projects</h2>
+            <h2>Most Recent Articles</h2>
         </main>
         <footer>
             <div id="footer-wrapper1">
