30th commit - landing page display layout enhancement

--- a/html/index.html
+++ b/html/index.html
@@ -12,6 +12,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/articles-style.css">
+    <link rel="stylesheet" href="../css/portfolio-style.css">
     <script src="../script/menu.js" defer="defer"></script>
     <link rel="apple-touch-icon" sizes="72x72" href="apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
@@ -51,7 +53,7 @@
                     towards the Computer Systems certificate.</p>
                 <p>Feel free to check out my GitHub here: <a href=" https://github.com/codingcapy" target="_blank">
                         Coding Capy</a></p>
-                <p>Language proficiencies:</p>
+                <p>My language proficiencies:</p>
                 <div id="languages">
                     <img src="../html/image/python.png" alt="" class="lang-icon">
                     <img src="../html/image/java.png" alt="" class="lang-icon">
@@ -73,7 +75,103 @@
                 </p>
             </div>
             <h2>Most Recent Portfolio Projects</h2>
+            <div id="current-projects-section">
+                <article>
+                    <a href="./portfolio/portfolio1.html">
+                        <figure>
+                            <img src="./image/banking-sys-python.jpg" alt="Banking System Prototype II"
+                                class="portfolio-img">
+                        </figure>
+                        <figcaption>
+                            <h3>Banking System Prototype II</h3>
+                            <p>This project is a banking system prototype program written using object-oriented
+                                programming
+                                in
+                                Python.</p>
+                        </figcaption>
+                    </a>
+                </article>
+                <article>
+                    <a href="./portfolio/portfolio2.html">
+                        <figure>
+                            <img src="./image/art-gallery-web-app.jpg" alt="Art Gallery Web App" class="portfolio-img">
+
+                        </figure>
+                        <figcaption>
+                            <h3>Art Gallery Web App</h3>
+                            <p>This is a web app I developed for a talented artist who wanted her customers to be
+                                able to browse
+                                her
+                                shop at conventions without necessarily having to wait near her booth physically to
+                                look at her
+                                products.</p>
+                        </figcaption>
+                    </a>
+                </article>
+                <article>
+                    <a href="./portfolio/portfolio3.html">
+                        <figure>
+                            <img src="./image/banking-sys-prototype.jpg" alt="Banking System Prototype"
+                                class="portfolio-img">
+                        </figure>
+                        <figcaption>
+                            <h3>Banking System Prototype</h3>
+                            <p>Having worked for a financial institution for the past 7 years, I have decided to
+                                make a personal
+                                project of building a banking system prototype that also functions as a CRM.</p>
+                        </figcaption>
+                    </a>
+                </article>
+            </div>
             <h2>Most Recent Articles</h2>
+            <section id="articles-section">
+                <article>
+                    <figure>
+                        <a href="./articles/article3.html">
+                            <img src="./image/chatgpt.jpg" alt="ChatGPT" class="articles-img">
+                            <figcaption>
+                                <h2>ChatGPT</h2>
+                                <p>Posted on: April 12, 2023</p>
+                                <p>I'm going to start by being honest and declaring that I do use chatGPT's or its
+                                    variants's
+                                    help on a regular basis when I develop software (I'm going to refer to all
+                                    versions of
+                                    OpenAI's machine learning chat software as chatGPT going forward for
+                                    simplicity).</p>
+                            </figcaption>
+                        </a>
+                    </figure>
+                </article>
+                <article>
+                    <figure>
+                        <a href="./articles/article1.html">
+                            <img src="./image/scrum-project-board.jpg" alt="Scrum Project Board" class="articles-img">
+                            <figcaption>
+                                <h2>Scrum Project</h2>
+                                <p>Posted on: April 10, 2023</p>
+                                <p>I recently had the honor of becoming a certified Professional Scrum Master I from
+                                    Scrum.org.
+                                    Since then, I onboarded on my first scrum project for an art gallery web app.
+                                </p>
+                            </figcaption>
+                        </a>
+                    </figure>
+                </article>
+                <article>
+                    <figure>
+                        <a href="./articles/article2.html">
+                            <img src="./image/scrum-board.jpg" alt="Scrum Board" class="articles-img">
+                            <figcaption>
+                                <h2>Scrum</h2>
+                                <p>Posted on: February 9, 2023</p>
+                                <p>Scrum is a highly-disciplined agile framework focusing on time-boxed iterations
+                                    called
+                                    sprints.</p>
+                            </figcaption>
+                        </a>
+                    </figure>
+                </article>
+            </section>
         </main>
         <footer>
             <div id="footer-wrapper1">
