--- a/html/index.html
+++ b/html/index.html
@@ -27,7 +27,7 @@
 <body>
     <header>
         <div id="top-bar">
-            <a href="../html/index.html"><img src="../html/image/icon.jpg" alt="Capytech Icon" id="capytech-icon"></a>
+            <a href="./index.html"><img src="../html/image/capyness.png" alt="Capytech Icon" id="capytech-icon"></a>
             <button class="hamburger-menu">&#9776;</button>
         </div>
         <nav>
