32nd commit - new portfolio article added

--- a/html/index.html
+++ b/html/index.html
@@ -77,6 +77,18 @@
             <h2>Most Recent Portfolio Projects</h2>
             <div id="current-projects-section">
                 <article>
+                    <a href="./portfolio/portfolio6.html">
+                        <figure>
+                            <img src="./image/red_knight.jpg" alt="Banking System Prototype II" class="portfolio-img">
+                        </figure>
+                        <figcaption>
+                            <h3>JavaScript RPG</h3>
+                            <p>Click here to play! This project is a JavaScript RPG game I recently completed.</p>
+
+                        </figcaption>
+                    </a>
+                </article>
+                <article>
                     <a href="./portfolio/portfolio1.html">
                         <figure>
                             <img src="./image/banking-sys-python.jpg" alt="Banking System Prototype II"
