--- a/html/portfolio/index.html
+++ b/html/portfolio/index.html
@@ -47,6 +47,19 @@
                 <h2>Current Projects</h2>
                 <div id="current-projects-section">
                     <article>
+                        <a href="./portfolio6.html">
+                            <figure>
+                                <img src="../image/red_knight.jpg" alt="Banking System Prototype II"
+                                    class="portfolio-img">
+                            </figure>
+                            <figcaption>
+                                <h3>JavaScript RPG</h3>
+                                <p>Click here to play! This project is a JavaScript RPG game I recently completed.</p>
+
+                            </figcaption>
+                        </a>
+                    </article>
+                    <article>
                         <a href="./portfolio1.html">
                             <figure>
                                 <img src="../image/banking-sys-python.jpg" alt="Banking System Prototype II"
