33rd commit - added button controls for mobile devices

--- a/html/portfolio/portfolio6.html
+++ b/html/portfolio/portfolio6.html
@@ -12,6 +12,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="../../css/style.css">
+    <script src="../../script/jquery-3.7.0.min.js"></script>
     <script src="../../script/menu.js" defer="defer"></script>
     <script src="../../script/red_knight.js" defer=defer></script>
     <link rel="apple-touch-icon" sizes="72x72" href="apple-touch-icon.png">
@@ -50,6 +51,14 @@
                 <h3>Game Projects using JavaScript</h3>
                 <h4>JavaScript RPG Project</h4>
                 <canvas id="canvas"></canvas>
+                <div id="buttons">
+                    <div></div>
+                    <button id="up-button">&#8593;</button>
+                    <div></div>
+                    <button id="left-button">&#8592;</button>
+                    <button id="down-button">&#8595;</button>
+                    <button id="right-button">&#8594;</button>
+                </div>
                 <p>Use W A S D keys to move the red knight and explore the island! This is my fourth JavaScript game
                     development
                     project, fully written in JavaScript. I am considering adding more features
