40th commit - resize grid layouts and add canvas border

--- a/html/about/index.html
+++ b/html/about/index.html
@@ -45,6 +45,7 @@
 
             <div class="main-wrapper">
                 <h1>About CapyTech</h1>
+                <img src="../image/paul_kim.jpg" alt="Paul Kim" class="scrum-img">
                 <p>I was born in Belgium, grew up in Switzerland, and I am a permanent resident of Canada. My hobbies
                     and passion include fitness, outdoor sports and activities, travelling, playing (and developing)
                     video games, anime, music, art, go-karting, skiing and snowboarding, cooking, and dogs and cats.</p>
