--- a/html/index.html
+++ b/html/index.html
@@ -55,15 +55,24 @@
                         Coding Capy</a></p>
                 <p>My language proficiencies:</p>
                 <div id="languages">
-                    <img src="../html/image/python.png" alt="" class="lang-icon">
-                    <img src="../html/image/java.png" alt="" class="lang-icon">
-                    <img src="../html/image/c.png" alt="" class="lang-icon">
-                    <img src="../html/image/sql.png" alt="" class="lang-icon">
-                    <img src="../html/image/c-sharp.png" alt="" class="lang-icon">
-                    <img src="../html/image/unity.png" alt="" class="lang-icon">
-                    <img src="../html/image/javascript.png" alt="" class="lang-icon">
-                    <img src="../html/image/css3.png" alt="" class="lang-icon">
-                    <img src="../html/image/html5.png" alt="" class="lang-icon">
+                    <a href="https://www.python.org/" target="_blank"><img src="../html/image/python.png" alt="Python"
+                            class="lang-icon"></a>
+                    <a href="https://www.java.com/en/" target="_blank"><img src="../html/image/java.png" alt="Java"
+                            class="lang-icon"></a>
+                    <a href="https://en.wikipedia.org/wiki/C_(programming_language)" target="_blank"><img
+                            src="../html/image/c.png" alt="C" class="lang-icon"></a>
+                    <a href="https://en.wikipedia.org/wiki/SQL" target="_blank"><img src="../html/image/sql.png"
+                            alt="SQL" class="lang-icon"></a>
+                    <a href="https://en.wikipedia.org/wiki/C_Sharp_(programming_language)" target="_blank"><img
+                            src="../html/image/c-sharp.png" alt="C#" class="lang-icon">
+                        <a href="https://unity.com/" target="_blank"><img src="../html/image/unity.png" alt="Unity"
+                                class="lang-icon"></a></a>
+                    <a href="https://en.wikipedia.org/wiki/JavaScript" target="_blank"><img
+                            src="../html/image/javascript.png" alt="JavaScript" class="lang-icon">
+                        <a href="https://en.wikipedia.org/wiki/HTML" target="_blank"><img src="../html/image/html5.png"
+                                alt="" class="lang-icon"></a>
+                        <a href="https://en.wikipedia.org/wiki/CSS" target="_blank"><img src="../html/image/css3.png"
+                                alt="" class="lang-icon"></a></a>
                 </div>
                 <p>I graduated the University of British Columbia with a major in Political Science and minor in
                     Economics in 2014.
