--- a/html/portfolio/portfolio6.html
+++ b/html/portfolio/portfolio6.html
@@ -13,6 +13,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="../../css/style.css">
     <script src="../../script/jquery-3.7.0.min.js"></script>
+    <script src="../../script/gsap.js"></script>
     <script src="../../script/menu.js" defer="defer"></script>
     <script src="../../script/red_knight.js" defer=defer></script>
     <link rel="apple-touch-icon" sizes="72x72" href="apple-touch-icon.png">
@@ -50,7 +51,33 @@
                 <h2>GameProjects</h2>
                 <h3>Game Projects using JavaScript</h3>
                 <h4>JavaScript RPG Project</h4>
-                <canvas id="canvas"></canvas>
+                <div id="container">
+                    <div id="container2"></div>
+                    <canvas id="canvas"></canvas>
+                    <div id="user-interface">
+                        <div id="enemy-stats">
+                            <h2 id="enemy-name"></h2>
+                            <div id="enemy-hp">
+                                <div id="enemy-hp-bar-max"></div>
+                                <div id="enemy-hp-bar-actual"></div>
+                            </div>
+                        </div><!--end div enemy-stats-->
+                        <div id="player-stats">
+                            <h2 id="player-name"></h2>
+                            <div id="player-hp">
+                                <div id="player-hp-bar-max"></div>
+                                <div id="player-hp-bar-actual"></div>
+                            </div>
+                        </div><!--end div player stats-->
+                        <div id="battle-ui">
+                            <div id="battle-msg"></div>
+                            <div id="battle-menu"></div>
+                            <div id="attack-type">
+                                <h2>Attack Type</h2>
+                            </div>
+                        </div><!--end div battle-ui-->
+                    </div><!--end div user interface-->
+                </div><!--end div container-->
                 <div id="buttons">
                     <div></div>
                     <button id="up-button">&#8593;</button>
