--- a/html/index.html
+++ b/html/index.html
@@ -61,18 +61,20 @@
                             class="lang-icon"></a>
                     <a href="https://en.wikipedia.org/wiki/C_(programming_language)" target="_blank"><img
                             src="../html/image/c.png" alt="C" class="lang-icon"></a>
+
+                    <a href="https://en.wikipedia.org/wiki/HTML" target="_blank"><img src="../html/image/html5.png"
+                            alt="" class="lang-icon"></a>
+                    <a href="https://en.wikipedia.org/wiki/CSS" target="_blank"><img src="../html/image/css3.png" alt=""
+                            class="lang-icon"></a>
+                    <a href="https://en.wikipedia.org/wiki/JavaScript" target="_blank"><img
+                            src="../html/image/javascript.png" alt="JavaScript" class="lang-icon"></a>
                     <a href="https://en.wikipedia.org/wiki/SQL" target="_blank"><img src="../html/image/sql.png"
                             alt="SQL" class="lang-icon"></a>
                     <a href="https://en.wikipedia.org/wiki/C_Sharp_(programming_language)" target="_blank"><img
-                            src="../html/image/c-sharp.png" alt="C#" class="lang-icon">
-                        <a href="https://unity.com/" target="_blank"><img src="../html/image/unity.png" alt="Unity"
-                                class="lang-icon"></a></a>
-                    <a href="https://en.wikipedia.org/wiki/JavaScript" target="_blank"><img
-                            src="../html/image/javascript.png" alt="JavaScript" class="lang-icon">
-                        <a href="https://en.wikipedia.org/wiki/HTML" target="_blank"><img src="../html/image/html5.png"
-                                alt="" class="lang-icon"></a>
-                        <a href="https://en.wikipedia.org/wiki/CSS" target="_blank"><img src="../html/image/css3.png"
-                                alt="" class="lang-icon"></a></a>
+                            src="../html/image/c-sharp.png" alt="C#" class="lang-icon"></a>
+                    <a href="https://unity.com/" target="_blank"><img src="../html/image/unity.png" alt="Unity"
+                            class="lang-icon"></a>
+
                 </div>
                 <p>I graduated the University of British Columbia with a major in Political Science and minor in
                     Economics in 2014.
@@ -93,7 +95,6 @@
                         <figcaption>
                             <h3>JavaScript RPG</h3>
                             <p>Click here to play! This project is a JavaScript RPG game I recently completed.</p>
-
                         </figcaption>
                     </a>
                 </article>
