--- a/html/index.html
+++ b/html/index.html
@@ -36,6 +36,7 @@
                 <li class="nav-li"><a class="nav-link" href="../html/portfolio/index.html">Portfolio</a></li>
                 <li class="nav-li"><a class="nav-link" href="../html/articles/index.html">Articles</a></li>
                 <li class="nav-li"><a class="nav-link" href="../html/about/index.html">About</a></li>
+                <li class="nav-li"><a class="nav-link" href="../html/resume/index.html">Resume</a></li>
                 <li class="nav-li"><a class="nav-link" href="../html/contact/index.html">Contact</a></li>
             </ul>
         </nav>
