--- a/html/resume/index.html
+++ b/html/resume/index.html
@@ -4,11 +4,11 @@
     author: Paul Kim
     date: October 5, 2022
     version: 1.0
-    notes: Capytech contact page
+    notes: Capytech about page
 -->
 
 <head>
-    <title>Capytech | Contact</title>
+    <title>Capytech | Resume</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="../../css/style.css">
@@ -45,10 +45,8 @@
         <main>
 
             <div class="main-wrapper">
-                <h1>CapyTech Contact</h1>
-                <p>You can contact me at the following:</p>
-                <p>Cellphone: (+1) 778-994-4939</p>
-                <p>Email: spkim0921@gmail.com</p>
+                <h1>Resume</h1>
+                <img src="../image/paulkim_resume_2023.jpg" alt="Paul Kim" class="scrum-img">
             </div>
         </main>
         <footer>
